renaming the rest

--- a/src/updated.html
+++ b/src/updated.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Yet Another Speed Dial Updated!</title>
+  <title>Simple Speed Dial Updated!</title>
 
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -44,7 +44,7 @@
 
 <!-- Begin page content -->
 <main role="main" class="container">
-  <h2 class="mt-5">Yet Another Speed Dial has been updated to v1.14.7!</h2>
+  <h2 class="mt-5">Simple Speed Dial has been updated to v1.14.7!</h2>
   <p class="lead"><br />Please consider <strong><a href="https://chrome.google.com/webstore/detail/yet-another-speed-dial/imohnlganmafcmidafklgkgfgaagiohn" target="_blank">leaving a review</a></strong></p>
   <p class="lead"><strong>YASD will always be 100% free and <a href="https://github.com/conceptualspace/yet-another-speed-dial" target="_blank">open source</a></strong></p>
   <p class="lead">Your feedback matters. Reach out to me directly with any questions, suggestions or feedback via email here: <a href="mailto:dev@conceptualspace.net">dev@conceptualspace.net</a>. You can also <a href="https://github.com/sponsors/conceptualspace">sponsor this project on GitHub</a> ❤</p>
